2014-01-03  Roland Winkler  <winkler@gnu.org>
	Display records for messages more flexibly.
	* lisp/bbdb-mua.el (bbdb-update-records, bbdb-mua-update-records):
	New optional arg sort.
	(bbdb-mua-display-records): New optional arg all.
	(bbdb-mua-display-all-records): New command.
	(bbdb-mua-display-all-recipients): Renamed from
	bbdb-display-all-recipients.

2014-01-03  Roland Winkler  <winkler@gnu.org>
	Handle new records more carefully.
	* lisp/bbdb.el (bbdb-empty-record): New function.
	(bbdb-change-record): Use bbdb-create-hook.  Fix docstring.
	(bbdb-insert-record-internal, bbdb-overwrite-record-internal): Fix
	docstring.
	* lisp/bbdb-com.el (bbdb-create): Do not use bbdb-create-hook.
	(bbdb-create-internal): Make arg name optional and allow a nil
	value.  Check validity of arguments only if new arg check is
	non-nil.
	(bbdb-merge-records): Return record.
	* lisp/bbdb-mua.el (bbdb-annotate-message): Use bbdb-empty-record.
	Handle case that arg create-p is a function.  Do not use
	bbdb-create-hook.
	* lisp/bbdb-snarf.el (bbdb-snarf): Use bbdb-empty-record.  Return
	record.  Do not use bbdb-create-hook.

2014-01-03  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-snarf.el (bbdb-snarf-rule-interactive): Use
	symbol-name.

2013-11-16  Roland Winkler  <winkler@gnu.org>
	* configure.ac: Increase BBDB version number to 3.0.50.

2013-11-16  Christian Egli <christian.egli@sbs.ch>
	* Makefile.am: New target elpa.
	* lisp/bbdb-pkg.el.in: New file for elpa.
	* configure.ac, .gitignore: Handle it.
	* lisp/Makefile.am: Define CLEANFILES and EXTRA_DIST.

2013-11-16  Roland Winkler  <winkler@gnu.org>
	* m4/package_date.m4: Use git log.

2013-11-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-sc.el: Fix documentation.
	(bbdb/sc-consult-attr): Do not use car.
	(Bug#40398)

2013-11-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-field-menu): Use format.  Call
	bbdb-browse-url for url xfields.
	(bbdb-mouse-menu): Use format.
